background-video added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+     
+      <video autoplay loop muted plays-inline class="back-video">
+        <source src="back-img/857267-hd_1920_1080_24fps.mp4" type="video/mp4">
+      </video>
+
       <div class="container">
         <h1>Auto Cost Finder</h1>
         <form id="carCostForm">
